data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_105.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\96\80\80\80\00\01\03\65\6e"
    "\76\0e\72\65\63\75\72\73\69\76\65\5f\66\75\6e\63"
    "\00\00\03\82\80\80\80\00\01\01\07\88\80\80\80\00"
    "\01\04\74\65\73\74\00\01\0a\9f\80\80\80\00\01\99"
    "\80\80\80\00\00\02\7f\02\7f\02\7f\10\00\41\01\0c"
    "\02\0b\41\02\0c\01\0b\41\03\0c\00\0b\0b"
  )
""
)